syntax = "proto3";

package filter;
option go_package = "openeuler.io/mesh/api/filter;filter";

message HttpConnectionManager {
  string route_config_name = 2;
}
