syntax = "proto3";

package filter;
option go_package = "openeuler.io/mesh/api/filter;filter";

message TcpProxy {
  string cluster = 2;
}
